# python-fast-api-groundtruth

./: main.py  pyproject.toml
pdf_folder/: ReadMe.md  main.py
schema_groundtruth/: main.py  product_schema.py  product_service.py  requirements.txt  router.py
