[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fast-api-groundtruth"
version = "0.1.1"
description = "Groundtruth FastAPI service"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools.packages.find]
include = ["schema_groundtruth*", "pdf_folder*"]
